# poetry2uv

./: .gitignore  CHANGELOG.md  README.md  convert_poetry_to_uv.py  convert_poetry_to_uv.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull_requests.yml
poetry2uv/: cli.py  convert_poetry_to_uv.py
tests/: pyproject_expected.toml  pyproject_in.toml  test_convert_poetry_to_uv.py
tests/resources/: pyproject_expected.toml  pyproject_in.toml
